Added decorators to validate function inputs

--- a/Assignment-1_gayan.ipynb
+++ b/Assignment-1_gayan.ipynb
@@ -37,18 +37,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Enable/disable debug mode\n",
-    "debug = 1"
+    "### Helper Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +70,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Decorator function to validate input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decorator function to validate airport names\n",
+    "def validate_airport_name(orig_func):\n",
+    "    def wrapper_func(*args, **kwargs):\n",
+    "        for arg in args:\n",
+    "            # print(\"Arguments: {}\".format(arg))\n",
+    "            airports_list = list(airports_dict.keys())\n",
+    "            # Include True and False to list to cover the \"internal\" variable value\n",
+    "            airports_list.append(True)\n",
+    "            airports_list.append(False)\n",
+    "            if arg not in airports_list:\n",
+    "                return \"Invalid airport name {} passed to {}\".format(arg,orig_func.__name__)\n",
+    "        return orig_func(*args, **kwargs)\n",
+    "    return wrapper_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decorator function to validate flight names\n",
+    "def validate_flight_name(orig_func):\n",
+    "    def wrapper_func(*args, **kwargs):\n",
+    "        for arg in args:\n",
+    "            # print(\"Arguments: {}\".format(arg))\n",
+    "            flights_list = list(flights_dict.keys())\n",
+    "            # Include True and False to list to cover the \"internal\" variable value\n",
+    "            flights_list.append(True)\n",
+    "            flights_list.append(False)\n",
+    "            if arg not in flights_list:\n",
+    "                return \"Invalid flight name {} passed to {}\".format(arg,orig_func.__name__)\n",
+    "        return orig_func(*args, **kwargs)\n",
+    "    return wrapper_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "def readAirportFlightfile(inputfile):\n",
     "    with open(inputfile, \"r\") as f:\n",
     "        data = f.readlines()\n",
-    "    if debug:\n",
-    "        print(\"Read Data --> \", data)\n",
+    "        # print(\"Read Data --> \", data)\n",
     "\n",
     "    airports_dict= {}\n",
     "    flights_dict= {}\n",
@@ -128,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -369,11 +414,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "# internal = True when called by other internal functions. Default False\n",
+    "@validate_flight_name\n",
     "def displayConnectedAirports(flight, internal=False):\n",
     "    connected_airports = []\n",
     "    airports = list(airports_dict.keys())\n",
@@ -401,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -426,13 +472,13 @@
        "['Ahmedabad', 'Nagpur', 'Mumbai']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "displayConnectedAirports(\"Spicejet222\")"
+    "displayConnectedAirports(\"Spicejet222\")\n"
    ]
   },
   {
@@ -445,10 +491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@validate_airport_name\n",
     "def displayConnectedFlights(airport):\n",
     "    connected_flights = []\n",
     "    flights = list(flights_dict.keys())\n",
@@ -474,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +530,7 @@
        "['Indigo666', 'Indigo777', 'AirIndia111']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,11 +572,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "# internal = True when called by other internal functions. Default False\n",
+    "@validate_airport_name\n",
     "def displayDirectFlight(airport_a, airport_b, internal=False):\n",
     "\n",
     "    output_msg = \"\\n--------Function displayDirectFlight --------\\n\"\n",
@@ -556,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +692,7 @@
    "metadata": {},
    "source": [
     "### Algorithm\n",
-    "1. check if direct flight is available by calling displayDirectFlight(self, airport a, airport b\n",
+    "1. check if direct flight is available by calling displayDirectFlight(self, airport a, airport b)\n",
     "2. If yes, then return the path and exit\n",
     "3. If No, get the list of connected flights of the source airport\n",
     "\n",
@@ -658,13 +706,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global variable to keep track of visited airports during the recursive calls\n",
     "visited_airports = [False]*len(airports_dict)\n",
     "path = []\n",
+    "@validate_airport_name\n",
     "def findServiceAvailableRecursive(airport_a,airport_b):\n",
     "    # Notice that case0 won't occur since if there is no path from a -> b then b won't be marked as visited\n",
     "    # # case0: No service available (all airports visited)\n",
@@ -710,9 +759,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# findServiceAvailableRecursive(\"Chennai\",\"Nagpur\")\n",
     "findServiceAvailableRecursive(\"Chennai\",\"Hyderabad\")\n",
@@ -728,10 +785,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@validate_airport_name\n",
     "def findServiceAvailable(airport_a,airport_b):\n",
     "    global visited_airports\n",
     "    visited_airports = [False]*len(airports_dict)\n",
@@ -757,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
