Gayan: Implemented the in OOP style

--- a/Assignment-1_gayan.ipynb
+++ b/Assignment-1_gayan.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,19 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read Data -->  ['Indigo666 / Chennai / New Delhi\\n', 'Indigo777 / Calcutta / New Delhi\\n', 'Spicejet222 / Ahmedabad / Nagpur / Mumbai\\n', 'AirIndia111 / Ahmedabad / New Delhi\\n', 'Vistara555 / Vishakhapatnam / Hyderabad']\n",
       "1\t1\t0\t0\t0\t0\t0\t0\t\n",
       "0\t1\t1\t0\t0\t0\t0\t0\t\n",
       "0\t0\t0\t1\t1\t1\t0\t0\t\n",
       "0\t1\t0\t1\t0\t0\t0\t0\t\n",
-      "0\t0\t0\t0\t0\t0\t1\t1\t\n"
+      "0\t0\t0\t0\t0\t0\t1\t1\t\n",
+      "0\t1\t0\t0\t1\t0\t0\t0\t\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "--------Function showAll --------\n",
-      "Total number of cargo flights: 5\n",
+      "Total number of cargo flights: 6\n",
       "Total number of Airports: 8\n",
       "\n",
       "List of cargo flights: \n",
@@ -264,6 +264,7 @@
       "Spicejet222\n",
       "AirIndia111\n",
       "Vistara555\n",
+      "VGT123\n",
       "\n",
       "List of Airports: \n",
       "Chennai\n",
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -368,11 +369,12 @@
       "\n",
       "--------Function displayHubAirport --------\n",
       "Main hub airport: New Delhi\n",
-      "Number of cargo flights visited: 3\n",
+      "Number of cargo flights visited: 4\n",
       "List of Cargo Flights:\n",
       "Indigo666\n",
       "Indigo777\n",
       "AirIndia111\n",
+      "VGT123\n",
       "-----------------------------------------\n",
       "\n"
      ]
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
        "['Ahmedabad', 'Nagpur', 'Mumbai']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,16 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Indigo666', 'Indigo777', 'AirIndia111']"
+       "['Indigo666', 'Indigo777', 'AirIndia111', 'VGT123']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -832,6 +834,13 @@
       "\n",
       "--------Function findServiceAvailable --------\n",
       "Airport A: Chennai\n",
+      "Airport B: Nagpur\n",
+      "Can the food box be sent: Yes, Chennai > Indigo666 > New Delhi > VGT123 > Nagpur \n",
+      "-----------------------------------------\n",
+      "\n",
+      "\n",
+      "--------Function findServiceAvailable --------\n",
+      "Airport A: Chennai\n",
       "Airport B: Vishakhapatnam\n",
       "Can the food box be sent: No, Sorry there is no service available from Chennai to Vishakhapatnam\n",
       "\n",
@@ -842,6 +851,7 @@
    ],
    "source": [
     "findServiceAvailable(\"Chennai\",\"Mumbai\")\n",
+    "findServiceAvailable(\"Chennai\",\"Nagpur\")\n",
     "findServiceAvailable(\"Chennai\",\"Vishakhapatnam\")"
    ]
   },
